# sway.module_platform-glx11

./: .clang-format  .codedocs  .gitmodules  .travis.yml  CMakeLists.txt  README.md  index.html
docs/doxygen/: doxyfile.doxy
doxygen_resources/: doxyfile.doxy
examples/window/: CMakeLists.txt  README.md  main.cpp
include/sway/: glx11.h
include/sway/glx11/: canvas.h  canvas.hpp  glxcontext.h  glxcontext.hpp  glxvisualattributes.h  prereqs.h  prereqs.hpp  typedefs.h  windoweventlistener.h  windowinitialinfo.h  windowinitialparams.h  windowmode.h  windowmodes.h  windowsize.h  windowsize.hpp  windowsizes.h  xatom.h  xatom.hpp  xscreenconnection.h  xwindow.h
lib/: exports.json
lib/cpp/include/sway/: pltf.hpp
lib/cpp/include/sway/pltf/: windoweventlistener.hpp  windoweventtypes.hpp  windowinitialinfo.hpp
lib/cpp/include/sway/pltf/mac/: dtpatom.hpp  dtpscreenconnection.hpp
lib/cxs/: README.md
lib/cxx/: README.md
lib/cxx/include/sway/: pltf.hpp
lib/cxx/include/sway/pltf/: context.hpp  loopeable.hpp  looper.hpp  prereqs.hpp  timer.hpp  typedefs.hpp  windowinitialinfo.hpp  windowmodes.hpp  windowsize.hpp
lib/cxx/include/sway/pltf/mac/: dtpatom.hpp  dtpcanvas.hpp  dtpcontext.hpp  dtpvisualattributes.hpp  dtpwindow.hpp
lib/cxx/include/sway/pltf/web/: emscontext.hpp  emslooper.hpp  emswindow.hpp
lib/cxx/src/mac/: dtpcanvas.cpp  dtpcontext.cpp
lib/cxx/src/web/: emscontext.cpp  emslooper.cpp  emswindow.cpp
lib/include/sway/: glx11.hpp  pltf.hpp
lib/include/sway/glx11/: canvas.hpp  glxcontext.hpp  glxvisualattributes.hpp  prereqs.hpp  typedefs.hpp  windoweventlistener.hpp  windowinitialinfo.hpp  windowmodes.hpp  windowsize.hpp  xatom.hpp  xscreenconnection.hpp  xwindow.hpp
lib/include/sway/pltf/: context.hpp  timer.hpp  typedefs.hpp  windoweventlistener.hpp  windowmodes.hpp
lib/include/sway/pltf/mac/: dtpcanvas.hpp  dtpcontext.hpp  dtpwindow.hpp
lib/include/sway/pltf/web/: emscontext.hpp  emswindow.hpp
lib/src/: canvas.cpp  glxcontext.cpp  xscreenconnection.cpp  xwindow.cpp
lib/src/mac/: dtpcanvas.cpp  dtpscreenconnection.cpp  dtpwindow.cpp
lib/src/web/: emscontext.cpp  emswindow.cpp
scripts/travis/: codecov.sh  install-boost.sh  install-cmake.sh
src/: canvas.cpp  glxcontext.cpp  xscreenconnection.cpp  xwindow.cpp
